--- a/.github/workflows/deploy-bwg104.yml
+++ b/.github/workflows/deploy-bwg104.yml
@@ -14,7 +14,8 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Provision SSH key
+      - name: Provision SSH key (optional)
+        if: secrets.BWG104_SSH_KEY != ''
         uses: webfactory/ssh-agent@v0.9.0
         with:
           ssh-private-key: ${{ secrets.BWG104_SSH_KEY }}
@@ -23,6 +24,11 @@ jobs:
         env:
           DEPLOY_HOST: ${{ secrets.BWG104_SSH_HOST }}
         run: |
+          if [ -z "${DEPLOY_HOST}" ]; then
+            echo "::error::Missing secret BWG104_SSH_HOST"
+            exit 1
+          fi
+
           mkdir -p ~/.ssh
           ssh-keyscan -H "${DEPLOY_HOST}" >> ~/.ssh/known_hosts
 
@@ -30,8 +36,17 @@ jobs:
         env:
           DEPLOY_HOST: ${{ secrets.BWG104_SSH_HOST }}
           DEPLOY_USER: ${{ secrets.BWG104_SSH_USER }}
+          DEPLOY_PASSWORD: ${{ secrets.BWG104_SSH_PASSWORD }}
         run: |
-          ssh "${DEPLOY_USER}@${DEPLOY_HOST}" 'bash -s' <<'EOF'
+          set -euo pipefail
+
+          if [ -z "${DEPLOY_HOST}" ] || [ -z "${DEPLOY_USER}" ]; then
+            echo "::error::Missing deployment host or user secrets."
+            exit 1
+          fi
+
+          REMOTE_SCRIPT="$(mktemp)"
+          cat <<'EOF' > "${REMOTE_SCRIPT}"
           set -euo pipefail
 
           REPO_URL="https://github.com/D36u99er/mailcow-dockerized.git"
@@ -60,3 +75,14 @@ jobs:
           ${COMPOSE} pull
           ${COMPOSE} up -d
           EOF
+
+          if [ -n "${SSH_AUTH_SOCK:-}" ]; then
+            ssh -o StrictHostKeyChecking=no "${DEPLOY_USER}@${DEPLOY_HOST}" 'bash -s' < "${REMOTE_SCRIPT}"
+          elif [ -n "${DEPLOY_PASSWORD}" ]; then
+            sudo apt-get update
+            sudo apt-get install -y sshpass
+            sshpass -p "${DEPLOY_PASSWORD}" ssh -o StrictHostKeyChecking=no "${DEPLOY_USER}@${DEPLOY_HOST}" 'bash -s' < "${REMOTE_SCRIPT}"
+          else
+            echo "::error::No authentication method configured. Provide BWG104_SSH_KEY or BWG104_SSH_PASSWORD."
+            exit 1
+          fi
